--- a/workshops/freetier/manifest.json
+++ b/workshops/freetier/manifest.json
@@ -1,5 +1,5 @@
 {
-    "workshoptitle": "Oracle Verrazzano Fundamentals",
+    "workshoptitle": "Oracle Cloud World 23 - ECNJ Demo",
     "help": "livelabs-help-weblogic_us@oracle.com",
     "tutorials": [
         {
